[package]
name = "tokio-splice"
version = "0.1.0"
authors = ["Garrett Thornburg <film42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.15.0"
tokio = "0.2.0-alpha.5"
futures-preview = "=0.3.0-alpha.18"